Gettex translation fixed

--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-27 16:14+0100\n"
-"PO-Revision-Date: 2023-01-27 16:38+0100\n"
+"PO-Revision-Date: 2023-06-01 12:33+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
@@ -206,7 +206,7 @@ msgstr ""
 "been changed."
 
 msgid "Upravit množství na %1 %2?"
-msgstr "Change quantity to %1 2%?"
+msgstr "Change quantity to %1 %2?"
 
 msgid "Vybrat další produkt"
 msgstr "Select another product"
