Gettext translation fixed

--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-06-01 16:14+0200\n"
-"PO-Revision-Date: 2023-06-28 12:38+0200\n"
+"PO-Revision-Date: 2023-07-02 23:53+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
@@ -27,7 +27,7 @@ msgid "Zpráva z obchodu %1"
 msgstr "Message from eshop %1"
 
 msgid "V případě dotazů nás můžete kontaktovat na e-mailu %1"
-msgstr "If you have any questions, you can contact us on e.mail %1"
+msgstr "If you have any questions, you can contact us on e-mail %1"
 
 msgid "Krásný den přeje<br/>%1"
 msgstr "Have a nice day<br/>%1"
